changes on btn, hover and faq

--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -2784,6 +2784,7 @@
                             <!-- start single menu -->
                             <li
                               id="menu-item-2848"
+                              style="background-color: #C1FF72 !important;"
                               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2848 aux-menu-depth-0 aux-menu-root-1 aux-menu-item"
                             >
                               <a
@@ -3631,6 +3632,13 @@
                     data-settings='{"ekit_we_effect_on":"none"}'
                     data-widget_type="button.default"
                   >
+                  <style>
+                    .elementor-button:hover {
+                      background-color: #A1DD50 !important; /* Change to your desired hover color */
+                      transition: background-color 0.3s ease; /* Smooth transition */
+                    }
+                  </style>
+                  
                     <div class="elementor-widget-container">
                       <div class="elementor-button-wrapper">
                         <a
