--- a/waitlist/index.html
+++ b/waitlist/index.html
@@ -3081,7 +3081,7 @@
                                 <div
                                   class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons"
                                 >
-                                <div style="background-color: #FFF; z-index: 1000000000; padding: 20px; border-radius: 10px; max-width: 800px; margin: 0 auto; font-family: LufgaRegular, Sans-serif;">
+                                <div style="background-color: #FFF; padding: 20px; border-radius: 10px; max-width: 800px; margin: 0 auto; font-family: LufgaRegular, Sans-serif;">
                                     <h2  style=" color: rgb(40, 43, 44);  font-family: LufgaRegular, Sans-serif; font-size: 50px; font-weight: 600; line-height: 43px;">Add your details to join the waitlist.</h2>
                                     <h5 style=" color: rgb(68, 68, 68); font-family: LufgaRegular, Sans-serif; font-size: 26px; font-weight: 300; line-height: 28px;">We’ll send you a text with your invite to the app. Excited to see you on Mingloft</h5>
                                     
