changing texts in terms page

--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -3621,7 +3621,7 @@
                       <h2
                         class="elementor-heading-title elementor-size-default"
                       >
-                        Date with<br />your mate
+                        The event pre-experience<br />platform
                       </h2>
                     </div>
                   </div>
