ui changes on landing and faq

--- a/index.html
+++ b/index.html
@@ -3082,7 +3082,7 @@
                                           class="elementor-button-content-wrapper"
                                         >
                                           <span class="elementor-button-text"
-                                            >Join Waitlistddd</span
+                                            >Join Waitlist</span
                                           >
                                         </span>
                                       </a> -->
