--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -3634,8 +3634,8 @@
                   >
                   <style>
                     .elementor-button:hover {
-                      background-color: #A1DD50 !important; /* Change to your desired hover color */
-                      transition: background-color 0.3s ease; /* Smooth transition */
+                      background-color: #A1DD50 !important; 
+                      transition: background-color 0.3s ease; 
                     }
                   </style>
                   
