some ui changes on assets

--- a/freepremium/index.html
+++ b/freepremium/index.html
@@ -2949,19 +2949,17 @@
                             for="form-field-number"
                             class="elementor-field-label"
                           >
-                            User Number
+                            User Email
                           </label>
                           <input
                             size="1"
-                            type="tel"
-                            name="form_fields[number]"
-                            id="form-field-number"
+                            type="text"
+                            name="form_fields[email]"
+                            id="form-field-email"
                             class="elementor-field elementor-size-sm elementor-field-textual"
-                            placeholder="Your Number"
+                            placeholder="Your Email"
                             required="required"
                             aria-required="true"
-                            pattern="[0-9()#&amp;+*-=.]+"
-                            title="Only numbers and phone characters (#, -, *, etc) are accepted."
                           />
                         </div>
                         <div
@@ -2991,20 +2989,18 @@
                             for="form-field-invitenumber1"
                             class="elementor-field-label"
                           >
-                            Invite Number 1
+                            Invite Email 1
                           </label>
                           <input
                             size="1"
-                            type="tel"
-                            name="form_fields[invitenumber1]"
-                            id="form-field-invitenumber1"
+                            type="text"
+                            name="form_fields[inviteemail1]"
+                            id="form-field-inviteemail1"
                             class="elementor-field elementor-size-sm elementor-field-textual"
-                            placeholder="Invite 1 Number"
+                            placeholder="Invite 1 Email"
                             required="required"
                             aria-required="true"
-                            pattern="[0-9()#&amp;+*-=.]+"
-                            title="Only numbers and phone characters (#, -, *, etc) are accepted."
-                          />
+                                                       />
                         </div>
                         <div
                           class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-invitename2 elementor-col-100 elementor-field-required elementor-mark-required"
@@ -3033,29 +3029,27 @@
                             for="form-field-invitenumber2"
                             class="elementor-field-label"
                           >
-                            Invite Number 2
+                            Invite Email 2
                           </label>
                           <input
                             size="1"
-                            type="tel"
-                            name="form_fields[invitenumber2]"
-                            id="form-field-invitenumber2"
+                            type="text"
+                            name="form_fields[inviteemail2]"
+                            id="form-field-inviteemail2"
                             class="elementor-field elementor-size-sm elementor-field-textual"
-                            placeholder="Invite 2 Number"
+                            placeholder="Invite 2 Email"
                             required="required"
                             aria-required="true"
-                            pattern="[0-9()#&amp;+*-=.]+"
-                            title="Only numbers and phone characters (#, -, *, etc) are accepted."
                           />
                         </div>
-                        <div
+                        <!-- <div
                           class="elementor-field-type-html elementor-field-group elementor-column elementor-field-group-field_baf17bf elementor-col-100"
                         >
                           <span class="all-members"
                             >All members must be 18+. By sharing you agree to
                             our terms and conditions.</span
                           >
-                        </div>
+                        </div> -->
                         <div
                           class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons"
                         >
