ui changes on all pages

--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -3700,6 +3700,12 @@
                     data-settings='{"ekit_we_effect_on":"none"}'
                     data-widget_type="button.default"
                   >
+                  <style>
+                    .elementor-button:hover {
+                      background-color: #A1DD50 !important; 
+                      transition: background-color 0.3s ease; 
+                    }
+                  </style>
                     <div class="elementor-widget-container">
                       <div class="elementor-button-wrapper">
                         <a
