changes in hero image and typo

--- a/waitlist/index.html
+++ b/waitlist/index.html
@@ -3083,7 +3083,7 @@
                                 >
                                 <div style="background-color: #FFF; padding: 20px; border-radius: 10px; max-width: 800px; margin: 0 auto; font-family: LufgaRegular, Sans-serif;">
                                     <h2  style=" color: rgb(40, 43, 44);  font-family: LufgaRegular, Sans-serif; font-size: 50px; font-weight: 600; line-height: 43px;">Add your details to join the waitlist.</h2>
-                                    <h5 style=" color: rgb(68, 68, 68); font-family: LufgaRegular, Sans-serif; font-size: 26px; font-weight: 300; line-height: 28px;">We’ll send you a text with your invite to the app. Excited to see you on Mingloft</h5>
+                                    <h5 style=" color: rgb(68, 68, 68); font-family: LufgaRegular, Sans-serif; font-size: 26px; font-weight: 300; line-height: 28px;">We’ll send you an email with your invite to the app. Excited to see you on Mingloft</h5>
                                     
                                     <!-- Add Getform.io Action URL -->
                                     <form action="https://getform.io/f/adrrmgga" method="POST">
